When attempting to perform a search without entering a query string, set focus to the query input field and perform a fade effect on that input to draw attention to the problem.

--- a/Client/views/index.ejs
+++ b/Client/views/index.ejs
@@ -9,6 +9,8 @@
   <link rel='stylesheet' href='/stylesheets/style.css' />
   <link rel='stylesheet' href='/stylesheets/styles/vs.css' />
 
+  <script src="/javascripts/jquery.min.js"></script>
+  <script src="/javascripts/jquery-ui.min.js"></script>
   <script src="/javascripts/angular.min.js"></script>
   <script src="/javascripts/angular-sanitize.min.js"></script>
   <script src="/javascripts/ui-bootstrap.min.js"></script>
