--- a/Client/views/partials/changesets-tab.ejs
+++ b/Client/views/partials/changesets-tab.ejs
@@ -1,146 +1,150 @@
 <tab heading="Search Changesets">
   
   <div class="container">
+  
+	<form ng-submit="searchChangesetsButtonClicked(changesetsUseANDOperator)">
+	
+		<div class="row">
 
-    <div class="row">
+		  <div class="col-md-4">
 
-      <div class="col-md-4">
+			<div class="panel panel-default option-panel">
 
-        <div class="panel panel-default option-panel">
+			  <div class="panel-body option-panel">
 
-          <div class="panel-body option-panel">
+				<fieldset>
+				  <legend>Filters</legend>
+				  <div class="input-group">
+					<label class="input-group-addon" for="changeset-repo-input">Repository:</label>
+					<input type="text"
+						   id="changeset-repo-input"
+						   class="form-control" 
+						   placeholder="..." 
+						   ng-model="changesetSearchFilters.repository" 
+						   typeahead="suggestion for suggestion in getSuggestionsForField($viewValue, 'repository_suggest', 'changesets') | filter:$viewValue">
+				  </div>
+				  <div class="input-group">
+					<label class="input-group-addon" for="changeset-branch-input">Branch:</label>
+					<input type="text" 
+						   id="changeset-branch-input"
+						   class="form-control" 
+						   placeholder="..." 
+						   ng-model="changesetSearchFilters.branch" 
+						   typeahead="suggestion for suggestion in getSuggestionsForField($viewValue, 'branch_suggest', 'changesets') | filter:$viewValue">
+				  </div>
+				  <div class="input-group">
+					<label class="input-group-addon" for="changeset-author-input">Author:</label>
+					<input type="text" 
+						   id="changeset-author-input"
+						   class="form-control" 
+						   placeholder="..." 
+						   ng-model="changesetSearchFilters.author" 
+						   typeahead="suggestion for suggestion in getSuggestionsForField($viewValue, 'author_suggest', 'changesets') | filter:$viewValue">
+				  </div>
+				</fieldset>
 
-            <fieldset>
-              <legend>Filters</legend>
-              <div class="input-group">
-                <label class="input-group-addon" for="changeset-repo-input">Repository:</label>
-                <input type="text"
-                       id="changeset-repo-input"
-                       class="form-control" 
-                       placeholder="..." 
-                       ng-model="changesetSearchFilters.repository" 
-                       typeahead="suggestion for suggestion in getSuggestionsForField($viewValue, 'repository_suggest', 'changesets') | filter:$viewValue">
-              </div>
-              <div class="input-group">
-                <label class="input-group-addon" for="changeset-branch-input">Branch:</label>
-                <input type="text" 
-                       id="changeset-branch-input"
-                       class="form-control" 
-                       placeholder="..." 
-                       ng-model="changesetSearchFilters.branch" 
-                       typeahead="suggestion for suggestion in getSuggestionsForField($viewValue, 'branch_suggest', 'changesets') | filter:$viewValue">
-              </div>
-              <div class="input-group">
-                <label class="input-group-addon" for="changeset-author-input">Author:</label>
-                <input type="text" 
-                       id="changeset-author-input"
-                       class="form-control" 
-                       placeholder="..." 
-                       ng-model="changesetSearchFilters.author" 
-                       typeahead="suggestion for suggestion in getSuggestionsForField($viewValue, 'author_suggest', 'changesets') | filter:$viewValue">
-              </div>
-            </fieldset>
+			  </div>
 
-          </div>
+			</div>
 
-        </div>
+		  </div>
 
-      </div>
+		  <div class="col-md-4">
 
-      <div class="col-md-4">
+			<div class="panel panel-default option-panel">
 
-        <div class="panel panel-default option-panel">
+			  <div class="panel-body option-panel">
 
-          <div class="panel-body option-panel">
+				<fieldset>
+				  
+				  <legend>Query</legend>
+				  
+				  <div class="input-group">
+					<label class="input-group-addon bg-info" for="changeset-message-input">Message:</label>
+					<input type="text" 
+						   id="changeset-message-input"
+						   class="form-control" 
+						   placeholder="..." 
+						   ng-model="changesetSearchTemplate.query.filtered.query.bool.must[0].match.message.query">
+				  </div>
+				  
+				  <!--
+				  <br>
+				  
+				  <div class="container-fluid">
+					<div class="row">
+					  <div class="col-md-12">
+						  <div class="text-center">
+							<button class="btn btn-primary btn-sm" ng-click="showQuerySyntax()">Show Query Syntax</button>
+						  </div>
+					  </div>
+					</div>
+				  </div>
+				  -->
+				  
+				</fieldset>
 
-            <fieldset>
-              
-              <legend>Query</legend>
-              
-              <div class="input-group">
-                <label class="input-group-addon bg-info" for="changeset-message-input">Message:</label>
-                <input type="text" 
-                       id="changeset-message-input"
-                       class="form-control" 
-                       placeholder="..." 
-                       ng-model="changesetSearchTemplate.query.filtered.query.bool.must[0].match.message.query">
-              </div>
-              
-              <!--
-              <br>
-              
-              <div class="container-fluid">
-                <div class="row">
-                  <div class="col-md-12">
-                      <div class="text-center">
-                        <button class="btn btn-primary btn-sm" ng-click="showQuerySyntax()">Show Query Syntax</button>
-                      </div>
-                  </div>
-                </div>
-              </div>
-              -->
-              
-            </fieldset>
+			  </div>
 
-          </div>
+			</div>
 
-        </div>
+		  </div>
 
-      </div>
+		  <div class="col-md-4">
 
-      <div class="col-md-4">
+			<div class="panel panel-default option-panel">
 
-        <div class="panel panel-default option-panel">
+			  <div class="panel-body">
 
-          <div class="panel-body">
+				<fieldset>
 
-            <fieldset>
+				  <legend>Options</legend>
 
-              <legend>Options</legend>
+				  <div class="input-group">
 
-              <div class="input-group">
+					<span class="input-group-addon input-group-addon-contents-filter">Operator:</span>
+					<div class="operator-box text-left">
+					  <toggle-switch model="changesetsUseANDOperator" class="toggle-switch" on-label="AND" off-label="OR">
+						<toggle-switch>
+					</div>
 
-                <span class="input-group-addon input-group-addon-contents-filter">Operator:</span>
-                <div class="operator-box text-left">
-                  <toggle-switch model="changesetsUseANDOperator" class="toggle-switch" on-label="AND" off-label="OR">
-                    <toggle-switch>
-                </div>
+				  </div>
 
-              </div>
+				  <div class="input-group">
+					<label class="input-group-addon input-group-addon-contents-filter" for="changeset-search-res-input"># Search Results:</label>
+					<input type="text" id="changeset-search-res-input" class="form-control" placeholder="25" ng-model="changesetSearchTemplate.size">
+				  </div>
 
-              <div class="input-group">
-                <label class="input-group-addon input-group-addon-contents-filter" for="changeset-search-res-input"># Search Results:</label>
-                <input type="text" id="changeset-search-res-input" class="form-control" placeholder="25" ng-model="changesetSearchTemplate.size">
-              </div>
+				</fieldset>
 
-            </fieldset>
+			  </div>
 
-          </div>
+			</div>
 
-        </div>
+		  </div>
 
-      </div>
+		</div>
 
-    </div>
+		<div class="row">
 
-    <div class="row">
+		  <div class="col-md-12">
+			<div style="text-align:center;">
+			  <button type="submit" class="btn btn-primary">Search Changesets</button>
+			</div>
+		  </div>
 
-      <div class="col-md-12">
-        <div style="text-align:center;">
-          <button type="button" class="btn btn-primary" ng-click="searchChangesetsButtonClicked(changesetsUseANDOperator)">Search Changesets</button>
-        </div>
-      </div>
+		</div>
 
-    </div>
+		<div class="row">
 
-    <div class="row">
+		  <div class="col-md-12">
+			&nbsp;
+		  </div>
 
-      <div class="col-md-12">
-        &nbsp;
-      </div>
-
-    </div>
-
+		</div>
+		
+	</form>
+	
   </div>
       
 </tab>
